--- a/Src/Css/Global.css
+++ b/Src/Css/Global.css
@@ -2,6 +2,19 @@
   font-family: "Poppins", sans-serif;
 }
 
+.fadeInLong {
+  -webkit-animation: fadeIn 5s ease-in-out;
+  -moz-animation: fadeIn 5s ease-in-out;
+  -o-animation: fadeIn 5s ease-in-out;
+  animation: fadeIn 5s ease-in-out;
+}
+.fadeInShort {
+  -webkit-animation: fadeIn 1s ease-in-out;
+  -moz-animation: fadeIn 1s ease-in-out;
+  -o-animation: fadeIn 1s ease-in-out;
+  animation: fadeIn 1s ease-in-out;
+}
+
 main {
   height: 90%;
 }
@@ -65,4 +78,24 @@ a {
   * {
     font-size: 43.75%;
   }
+}
+
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; } 
+}
+
+@-moz-keyframes fadeIn {
+  0% { opacity: 0;}
+  100% { opacity: 1; }
+}
+
+@-o-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
