--- a/Src/Css/Header.css
+++ b/Src/Css/Header.css
@@ -7,7 +7,7 @@ header {
 
   position: relative;
 
-  background-color: #003049;
+  background-color: #424d525b;
 }
 
 header ul {
@@ -77,7 +77,9 @@ header .image-instagram {
   position: absolute;
   right: 50%;
   transform: translateX(50%);
+}
 
+.logo-hidden img {
   height: 5rem;
 }
 
