--- a/Src/Css/Global.css
+++ b/Src/Css/Global.css
@@ -21,7 +21,7 @@ main {
 
 body {
   margin: 0;
-  background-color: rgb(219, 219, 219);
+  background-color: #F2F3F5;
   height: 100vh;
   width: 100%;
 }
