--- a/Src/Css/Index.css
+++ b/Src/Css/Index.css
@@ -4,9 +4,14 @@ body {
   -o-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
+  height:100%;
 }
 
-h1 {
+.home {
+  height: 100vh;
+}
+
+.home h1 {
   margin: 0;
   padding-top: 1rem;
 
@@ -15,21 +20,26 @@ h1 {
   font-size: 4rem;
   text-align: center;
   color: #FFF;
+  text-shadow: 2px 2px 1px #000;
+}
+#title {
+padding-top: 5rem;
 }
 
-h2 {
+.home h2 {
   margin: 0;
   padding-top: 1.5rem;
-
+  
   width: 100%;
   
   text-align: center;
   font-weight: 700;
   font-size: 2rem;
   color: #FFF;
+  text-shadow: 2px 2px 1px #000;
 }
 
-h3 {
+.home h3 {
   color: #FFF;
   font-weight: 400;
   width: 100%;
@@ -101,5 +111,35 @@ h3 {
   .box:first-child {
     border: none;
     border-bottom: solid 3px #FFF;
+  }
+}
+
+@media(min-width:1580px) and (max-height: 780px) {
+  .home {
+    height:100%;
+  }
+}
+
+@media(min-width:1100px) and (max-height: 710px) {
+  .home {
+    height:100%;
+  }
+}
+
+@media(min-width:900px) and (max-height: 610px) {
+  .home {
+    height:100%;
+  }
+}
+
+@media(min-width:720px) and (max-height: 550px) {
+  .home {
+    height:100%;
+  }
+}
+
+@media(max-width:720px) and (max-height: 560px) {
+  .home {
+    height:100%;
   }
 }
