--- a/Src/Css/Index.css
+++ b/Src/Css/Index.css
@@ -7,11 +7,11 @@ body {
   height:100%;
 }
 
-.home {
+#home {
   height: 100vh;
 }
 
-.home h1 {
+#home h1 {
   margin: 0;
   padding-top: 1rem;
 
@@ -26,7 +26,7 @@ body {
 padding-top: 5rem;
 }
 
-.home h2 {
+#home h2 {
   margin: 0;
   padding-top: 1.5rem;
   
@@ -39,7 +39,7 @@ padding-top: 5rem;
   text-shadow: 2px 2px 1px #000;
 }
 
-.home h3 {
+#home h3 {
   color: #FFF;
   font-weight: 400;
   width: 100%;
@@ -115,31 +115,31 @@ padding-top: 5rem;
 }
 
 @media(min-width:1580px) and (max-height: 780px) {
-  .home {
+  #home {
     height:100%;
   }
 }
 
 @media(min-width:1100px) and (max-height: 710px) {
-  .home {
+  #home {
     height:100%;
   }
 }
 
 @media(min-width:900px) and (max-height: 610px) {
-  .home {
+  #home {
     height:100%;
   }
 }
 
 @media(min-width:720px) and (max-height: 550px) {
-  .home {
+  #home {
     height:100%;
   }
 }
 
 @media(max-width:720px) and (max-height: 560px) {
-  .home {
+  #home {
     height:100%;
   }
 }
