--- a/Src/Css/AboutUs.css
+++ b/Src/Css/AboutUs.css
@@ -16,7 +16,7 @@
   transform: translateX(50%);
 
   border-top: 2px solid #D7D8DA;
-  width: 20%;
+  width: 23%;
 }
 
 #about-us .who-are {
@@ -122,5 +122,11 @@
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 1fr);
     row-gap: 1rem;
+  }
+}
+
+@media(max-width: 720px) {
+  #about-us hr {
+    width: 40%;
   }
 }
